# MyProjects

./: .gitattributes  .gitignore  .gitignore.txt  CONTRIBUTING.md  DOCUMENTATION_AND_CONFIG.md  FINAL_COMMANDS.md  FINAL_SUMMARY.md  FOR_YOU_NOW.md  GITHUB_PUSH.md  GITIGNORE_EXPLAINED.md  HOW_TO_ORGANIZE_PROJECTS.md  INDEX.md  LICENSE  MONOREPO_GUIDE.md  QUICK_GUIDE.md  QUICK_START.md  README.md  README_FIRST.md  SAFETY_SUMMARY.md  SECURITY_CHECKLIST.md  SETUP.md  START_HERE.md  WHAT_NOT_UPLOADED.md  YOUR_STRUCTURE_IS_GOOD.md
.github/workflows/: ci.yml
C++/: .clang-format  .gitignore  CHEATSHEET.md  HOW_TO_ADD_PROJECTS.md  README.md
C++/2026-03-02/: README.md
C++/2026-03-02/calculator/: CMakeLists.txt
C++/2026-03-02/test/: CMakeLists.txt
C++/docs/: GITIGNORE_GUIDE.md
Python/: .gitignore  PYTHON_GUIDE.md  README.md  requirements.txt
Python/2026-03-02/: README.md
Python/src/: main.py
assignments/: README.md
assignments/cpp/: CMakeLists.txt  README.md
assignments/cpp/include/: Test.h
assignments/cpp/src/: Test.cpp
